--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,11 +3,6 @@
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
-pr:
-  branches:
-    include:
-    - master
-
 pool:
   vmImage: 'ubuntu-latest'
 
@@ -19,4 +14,4 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
 - task: PowerShell@2
   inputs:
-    filePath: './versioner.ps1'
+    filePath: '$(System.DefaultWorkingDirectory)\versioner.ps1'
