--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,4 +14,4 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
 - task: PowerShell@2
   inputs:
-    filePath: '$(System.DefaultWorkingDirectory)/versioner.ps1'
+    filePath: '$(Build.SourcesDirectory)/versioner.ps1'
