put variables in yaml file instead of input

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,8 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  tagUpdateLevel: 'minor'
+  tagMessage: 'new feature'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
