--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
     script: |
       git config --global user.email "chanelyoung99@gmail.com"
       git config --global user.name "Chanel Young"
+      git config --global url."git@github.com:".insteadOf "https://github.com/"
       
 - task: PowerShell@2
   inputs:
