--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,24 @@ steps:
       git config --global user.email "chanelyoung99@gmail.com"
       git config --global user.name "Chanel Young"
       git config --global url."git@github.com:".insteadOf "https://github.com/"
-      
+
+
 - task: PowerShell@2
+  displayName: 'creating merged branch'
   inputs:
-    filePath: '$(Build.SourcesDirectory)/versioner.PS1'
+    filePath: '$(Build.SourcesDirectory)/PipelineScripts/dry_run_merge.PS1'
+
+- task: PowerShell@2
+  displayName: 'Testing merged branch'
+  inputs:
+    filePath: '$(Build.SourcesDirectory)/PipelineScripts/build_checker.PS1'
+- task: PowerShell@2
+  displayName: 'cleaning up merged branch'
+  inputs:
+    filePath: '$(Build.SourcesDirectory)/PipelineScripts/dry_run_merge_cleanup.PS1'
+- task: PowerShell@2
+  displayName: 'creating new tag'
+  inputs:
+    filePath: '$(Build.SourcesDirectory)/PipelineScripts/versioner.PS1'
+
+
