Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,10 +3,10 @@
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
-trigger: 
+pr: 
   - master
   - development
-
+  - feature/*
 pool:
   vmImage: 'ubuntu-latest'
 
@@ -17,3 +17,15 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: PowerShell@2
+  displayName: 'building master'
+  inputs:
+    filePath: '$(Build.SourcesDirectory)/builder.PS1'
+    arguments: "master"
+
+
+- task: PowerShell@2
+  displayName: 'building master'
+  inputs:
+    filePath: '$(Build.SourcesDirectory)/builder.PS1'
+    arguments: "master"
