--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,15 +17,22 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-- task: PowerShell@2
-  displayName: 'building master'
-  inputs:
-    filePath: '$(Build.SourcesDirectory)/builder.PS1'
-    arguments: "master"
-
 
 - task: PowerShell@2
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
   displayName: 'building master'
   inputs:
-    filePath: '$(Build.SourcesDirectory)/builder.PS1'
+    filePath: '$(Build.SourcesDirectory)/PipelineScripts/builder.PS1'
     arguments: "master"
+- task: PowerShell@2
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/development')
+  displayName: 'building development'
+  inputs:
+    filePath: '$(Build.SourcesDirectory)/PipelineScripts/builder.PS1'
+    arguments: "development"
+- task: PowerShell@2
+  condition: and(ne(variables['Build.SourceBranch'], 'refs/heads/master'), ne(variables['Build.SourceBranch'], 'refs/heads/development'))
+  displayName: 'building user branch'
+  inputs:
+    filePath: '$(Build.SourcesDirectory)/PipelineScripts/builder.PS1'
+    arguments: "user branch"
