--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,25 +14,40 @@ variables:
   buildConfiguration: 'Release'
   branch: ''
 
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+stages: 
+- stage: deploy
+  jobs:
+  - deployment: DeployWeb
+    displayName: deploy Web App
+    pool:
+      vmImage: 'Ubuntu-latest'
+    # creates an environment if it doesn't exist
+    environment: 'manual-approve-test'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Hello world
+  - job: Versioning
+    steps:
+    - script: dotnet build --configuration $(buildConfiguration)
+      displayName: 'dotnet build $(buildConfiguration)'
 
-- task: PowerShell@2
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
-  displayName: 'building development'
-  inputs:
-    filePath: '$(Build.SourcesDirectory)/versioner.PS1'
-    arguments: 'master'
-- task: PowerShell@2
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/development')
-  displayName: 'building development'
-  inputs:
-    filePath: '$(Build.SourcesDirectory)/versioner.PS1'
-    arguments: "development"
-- task: PowerShell@2
-  condition: startsWith(variables['Build.SourceBranch'], 'refs/heads/feature')
-  displayName: 'building feature branch'
-  inputs:
-    filePath: '$(Build.SourcesDirectory)/versioner.PS1'
-    arguments: "feature branch"
+    - task: PowerShell@2
+      condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+      displayName: 'building development'
+      inputs:
+        filePath: '$(Build.SourcesDirectory)/versioner.PS1'
+        arguments: 'master'
+    - task: PowerShell@2
+      condition: eq(variables['Build.SourceBranch'], 'refs/heads/development')
+      displayName: 'building development'
+      inputs:
+        filePath: '$(Build.SourcesDirectory)/versioner.PS1'
+        arguments: "development"
+    - task: PowerShell@2
+      condition: startsWith(variables['Build.SourceBranch'], 'refs/heads/feature')
+      displayName: 'building feature branch'
+      inputs:
+        filePath: '$(Build.SourcesDirectory)/versioner.PS1'
+        arguments: "feature branch"
