--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,16 +38,16 @@ stages:
       displayName: 'building development'
       inputs:
         filePath: '$(Build.SourcesDirectory)/versioner.PS1'
-        arguments: 'master'
+        arguments: 'minor'
     - task: PowerShell@2
       condition: eq(variables['Build.SourceBranch'], 'refs/heads/development')
       displayName: 'building development'
       inputs:
         filePath: '$(Build.SourcesDirectory)/versioner.PS1'
-        arguments: "development"
+        arguments: "minor"
     - task: PowerShell@2
       condition: startsWith(variables['Build.SourceBranch'], 'refs/heads/feature')
       displayName: 'building feature branch'
       inputs:
         filePath: '$(Build.SourcesDirectory)/versioner.PS1'
-        arguments: "feature branch"
+        arguments: "minor"
