--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
       displayName: git configuration
       inputs:
         targetType: 'inline'
-        script: 
+        script: |
           git config --global user.email "chanelyoung99@gmail.com"
           git config --global user.name "Chanel Young"
 
