--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,5 +80,5 @@ stages:
   jobs: 
     - job: create
       steps: 
-      - publish: $(System.DefaultWorkingDirectory)/bin/Release
+      - publish: $(Build.SourcesDirectory)/bin/Release
         artifact: Release
